@@ -1,3 +1,7 @@
+2008-10-22 Jim Garlick <garlick@llnl.gov>
+
+	* src/client.c : Additional changes for IPv6 support.
+
 2008-10-21 Jim Garlick <garlick@llnl.gov>
 
 	* src/client.c, src/powermand.c, src/daemon.c, src/powerman.c,
